[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "robinwould"
authors = [{name = "Lucas Calegario", email = "lucas.c.calegario@outlook.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "aiohttp >= 3.8.0, <3.9.0",
    "scrapy >= 2.6.0, <2.7.0"
]

[project.urls]
Home = "https://github.com/xlurio/robinwould"
