[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "robinwould"
authors = [{name = "Lucas Calegario", email = "lucas.c.calegario@outlook.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "aiohttp >= 3.8.0, <3.9.0",
    "scrapy >= 2.6.0, <2.7.0"
]

[project.optional-dependencies]
test = [
    "pytest >=7.1.0, <7.2.0",
    "anyio >=3.6.0, <3.7.0",
    "trio >=0.21.0, < 0.22.0"
]

lint = [
    "pylint >=2.15.0, <2.16.0"
]

coverage = [
    "pytest-cov >=3.0.0, <3.1.0"
]

[project.urls]
Home = "https://github.com/xlurio/robinwould"
